--- a/scss/gridbox-nav.scss
+++ b/scss/gridbox-nav.scss
@@ -18,28 +18,70 @@
 
         .logo {
             flex: 1 1 auto;
+            height: 100%;
+
+            img {
+                position: relative;
+                top: 50%;
+                transform: translate(0, -50%);
+            }
         }
 
         .brandname {
             flex: 1 1 auto;
-            vertical-align: middle;
-            font: {
-                size: $logoSize;
-                weight: bold;
+            height: 100%;
+
+            p {
+                position: relative;
+                top: 50%;
+                transform: translate(0, -50%);
+
+                font: {
+                    size: $logoSize;
+                    weight: bold;
+                }
+                text-align: center;
             }
+            
+        } 
+    }
+
+    .navmenuwrap {
+        position: relative;
+
+        // &.responsive {
+        //     position: absolute;
+        // }
+
+        .menutoggle {
+            display: none;
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            padding: 10px 15px;
+            transform: translate(0, -50%);
+            background: #fff;
         }
-        
     }
 
     .navmenu {
         display: flex;
         flex-wrap: wrap;
+        // position: relative;
         margin: 0;
         padding: 0;
         list-style-type: none;
 
-        &.navmenu-right {
+        &.verticle {
+            flex-direction: column;
 
+            .navmenu-sub {
+                // repos changes the position to relative, so the dropdown menu item won't bock other main menu items when displayed vertically
+                // repos is used only when the parent ul.verticle is exists
+                &.repos {
+                    position: relative !important; // overwrite the position to relative
+                }
+            }
         }
 
         .menuitem {
@@ -50,6 +92,59 @@
                 padding: 10px 15px;
                 text-align: center;
                 text-decoration: none;
+                color: #000;
+
+                &:hover {
+                    background: #000;
+                    color: #fff;
+                }
+
+                &.active {
+                    background: #000;
+                    color: #fff;
+                }
+            }
+
+            
+
+            // /* 
+            // * =======================================================================
+            // *                          Dropdown Memu
+            // * -----------------------------------------------------------------------
+            // * Description:    Menu item has a dropdown list will have a .dropdown 
+            // *                 class. There will be a child ul element with a class of
+            // *                 .navmenu-sub.
+            // *
+            // *                 By default, it will not displayed, the toggle functionality 
+            // *                 will be enabled by javascript. When dropdown menu is 
+            // *                 toggled, a .show class will be added to the li element
+            // * -----------------------------------------------------------------------
+            // * Note:      The dropdown menu will have the same width as the grandpa 
+            // *            ul.navmenu element
+            // * ========================================================================
+            // */
+
+            &.dropdown {
+
+                .navmenu-sub {
+                    display: none;
+                    position: absolute;
+
+                    &.show{
+                        display: block;
+                        position: absolute;
+                        width: 100%;
+                        left: 0;
+                        list-style: none;
+                        background: #eee;
+                    }
+
+                    .submenuitem { 
+                        a {
+                            padding: 15px 20px;
+                        }
+                    }
+                }
             }
         }
     }
