Add Logo, and css issue

--- a/css/gridbox-form.css
+++ b/css/gridbox-form.css
@@ -55,6 +55,8 @@ form {
     color: #868e96; }
   .form-input:-ms-input-placeholder {
     color: #868e96; }
+  .form-input::-ms-input-placeholder {
+    color: #868e96; }
   .form-input::placeholder {
     color: #868e96; }
 
