--- a/css/gridbox-nav.css
+++ b/css/gridbox-nav.css
@@ -5,77 +5,44 @@
   .nav.nav-top {
     position: relative;
     top: 0; }
-  .nav .brand {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex; }
-    .nav .brand .logo {
-      -webkit-box-flex: 1;
-      -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
-      height: 100%; }
-      .nav .brand .logo img {
-        position: relative;
-        top: 50%;
-        -webkit-transform: translate(0, -50%);
-        -ms-transform: translate(0, -50%);
-        transform: translate(0, -50%); }
-    .nav .brand .brandname {
-      -webkit-box-flex: 1;
-      -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
-      height: 100%; }
-      .nav .brand .brandname p {
-        position: relative;
-        top: 50%;
-        -webkit-transform: translate(0, -50%);
-        -ms-transform: translate(0, -50%);
-        transform: translate(0, -50%);
-        font-size: 1.3rem;
-        font-weight: bold;
-        text-align: center; }
-  .nav .navmenuwrap {
-    position: relative; }
-    .nav .navmenuwrap .menutoggle {
-      display: none;
-      position: absolute;
-      right: 15px;
+  .nav .brand .logo {
+    position: relative;
+    height: 100%;
+    text-align: center; }
+    .nav .brand .logo img {
+      display: block;
+      position: relative;
+      width: 55px;
+      height: auto;
       top: 50%;
-      padding: 10px 15px;
+      -webkit-transform: translate(0, -50%);
+      -ms-transform: translate(0, -50%);
+      transform: translate(0, -50%); }
+  .nav .brand .brandname, .nav .brand .menutoggle {
+    height: 100%; }
+    .nav .brand .brandname p, .nav .brand .menutoggle p {
+      position: relative;
+      padding: 0.8rem 0;
+      top: 50%;
       -webkit-transform: translate(0, -50%);
       -ms-transform: translate(0, -50%);
       transform: translate(0, -50%);
-      background: #fff; }
+      font-size: 1.3rem;
+      font-weight: bold;
+      text-align: left; }
+  .nav .brand .menutoggle {
+    cursor: pointer; }
+  .nav .navmenuwrap {
+    position: relative; }
   .nav .navmenu {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
     margin: 0;
     padding: 0;
     list-style-type: none; }
-    .nav .navmenu.verticle {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column; }
-      .nav .navmenu.verticle .navmenu-sub.repos {
-        position: relative !important; }
     .nav .navmenu .menuitem {
-      -webkit-box-flex: 1;
-      -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto; }
+      position: relative; }
       .nav .navmenu .menuitem a {
         display: block;
-        padding: 10px 15px;
+        padding: 15px 20px;
         text-align: center;
         text-decoration: none;
         color: #000; }
@@ -86,11 +53,10 @@
           background: #000;
           color: #fff; }
       .nav .navmenu .menuitem.dropdown .navmenu-sub {
-        display: none;
-        position: absolute; }
+        display: none; }
         .nav .navmenu .menuitem.dropdown .navmenu-sub.show {
           display: block;
-          position: absolute;
+          position: relative;
           width: 100%;
           left: 0;
           list-style: none;
