--- a/css/gridbox-grids.css
+++ b/css/gridbox-grids.css
@@ -11,9 +11,9 @@
 .container-fluid {
   width: 100%; }
 
-@media (min-width: 576px) {
+@media (min-width: 375px) {
   .container, .container-fluid {
-    max-width: 540; } }
+    max-width: 351.5625; } }
 
 @media (min-width: 768px) {
   .container, .container-fluid {
@@ -33,10 +33,8 @@
 
 .row, .row-reverse, .stack, .stack-reverse {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 100%;
@@ -46,159 +44,133 @@
 .row-reverse {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
-  -webkit-flex-direction: row-reverse;
   -ms-flex-direction: row-reverse;
   flex-direction: row-reverse; }
 
 .stack {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column; }
 
 .stack-reverse {
   -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
-  -webkit-flex-direction: column-reverse;
   -ms-flex-direction: column-reverse;
   flex-direction: column-reverse; }
 
 .layer {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 100%;
   -ms-flex: 0 0 100%;
   flex: 0 0 100%; }
 
 .col {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
 
 .col-mob {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
 
 .col-mob-l {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
 
 .col-tab {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
 
 .col-lap {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
 
 .col-desk {
   -webkit-box-flex: 1;
-  -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto; }
 
 .col-1 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 6.25%;
   -ms-flex: 0 0 6.25%;
   flex: 0 0 6.25%; }
 
 .col-2 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 12.5%;
   -ms-flex: 0 0 12.5%;
   flex: 0 0 12.5%; }
 
 .col-3 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 18.75%;
   -ms-flex: 0 0 18.75%;
   flex: 0 0 18.75%; }
 
 .col-4 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 25%;
   -ms-flex: 0 0 25%;
   flex: 0 0 25%; }
 
 .col-5 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 31.25%;
   -ms-flex: 0 0 31.25%;
   flex: 0 0 31.25%; }
 
 .col-6 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 37.5%;
   -ms-flex: 0 0 37.5%;
   flex: 0 0 37.5%; }
 
 .col-7 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 43.75%;
   -ms-flex: 0 0 43.75%;
   flex: 0 0 43.75%; }
 
 .col-8 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 50%;
   -ms-flex: 0 0 50%;
   flex: 0 0 50%; }
 
 .col-9 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 56.25%;
   -ms-flex: 0 0 56.25%;
   flex: 0 0 56.25%; }
 
 .col-10 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 62.5%;
   -ms-flex: 0 0 62.5%;
   flex: 0 0 62.5%; }
 
 .col-11 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 68.75%;
   -ms-flex: 0 0 68.75%;
   flex: 0 0 68.75%; }
 
 .col-12 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 75%;
   -ms-flex: 0 0 75%;
   flex: 0 0 75%; }
 
 .col-13 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 81.25%;
   -ms-flex: 0 0 81.25%;
   flex: 0 0 81.25%; }
 
 .col-14 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 87.5%;
   -ms-flex: 0 0 87.5%;
   flex: 0 0 87.5%; }
 
 .col-15 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 93.75%;
   -ms-flex: 0 0 93.75%;
   flex: 0 0 93.75%; }
 
 .col-16 {
   -webkit-box-flex: 0;
-  -webkit-flex: 0 0 100%;
   -ms-flex: 0 0 100%;
   flex: 0 0 100%; }
 
@@ -292,85 +264,72 @@
 .col-reverse-offset-15 {
   margin-right: 93.75%; }
 
-@media (min-width: 576px) {
+.col-hide {
+  display: none; }
+
+@media (min-width: 375px) {
   .col-mob-1 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 6.25%;
     -ms-flex: 0 0 6.25%;
     flex: 0 0 6.25%; }
   .col-mob-2 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 12.5%;
     -ms-flex: 0 0 12.5%;
     flex: 0 0 12.5%; }
   .col-mob-3 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 18.75%;
     -ms-flex: 0 0 18.75%;
     flex: 0 0 18.75%; }
   .col-mob-4 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%; }
   .col-mob-5 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 31.25%;
     -ms-flex: 0 0 31.25%;
     flex: 0 0 31.25%; }
   .col-mob-6 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 37.5%;
     -ms-flex: 0 0 37.5%;
     flex: 0 0 37.5%; }
   .col-mob-7 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 43.75%;
     -ms-flex: 0 0 43.75%;
     flex: 0 0 43.75%; }
   .col-mob-8 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%; }
   .col-mob-9 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 56.25%;
     -ms-flex: 0 0 56.25%;
     flex: 0 0 56.25%; }
   .col-mob-10 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 62.5%;
     -ms-flex: 0 0 62.5%;
     flex: 0 0 62.5%; }
   .col-mob-11 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 68.75%;
     -ms-flex: 0 0 68.75%;
     flex: 0 0 68.75%; }
   .col-mob-12 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%; }
   .col-mob-13 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 81.25%;
     -ms-flex: 0 0 81.25%;
     flex: 0 0 81.25%; }
   .col-mob-14 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 87.5%;
     -ms-flex: 0 0 87.5%;
     flex: 0 0 87.5%; }
   .col-mob-15 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 93.75%;
     -ms-flex: 0 0 93.75%;
     flex: 0 0 93.75%; }
   .col-mob-16 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%; }
   .col-mob-offset-1 {
@@ -432,87 +391,73 @@
   .col-mob-offset-15 {
     margin-left: 93.75%; }
   .col-mob-reverse-offset-15 {
-    margin-right: 93.75%; } }
+    margin-right: 93.75%; }
+  .col-mob-hide {
+    display: none; } }
 
 @media (min-width: 768px) {
   .col-mob-l-1 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 6.25%;
     -ms-flex: 0 0 6.25%;
     flex: 0 0 6.25%; }
   .col-mob-l-2 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 12.5%;
     -ms-flex: 0 0 12.5%;
     flex: 0 0 12.5%; }
   .col-mob-l-3 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 18.75%;
     -ms-flex: 0 0 18.75%;
     flex: 0 0 18.75%; }
   .col-mob-l-4 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%; }
   .col-mob-l-5 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 31.25%;
     -ms-flex: 0 0 31.25%;
     flex: 0 0 31.25%; }
   .col-mob-l-6 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 37.5%;
     -ms-flex: 0 0 37.5%;
     flex: 0 0 37.5%; }
   .col-mob-l-7 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 43.75%;
     -ms-flex: 0 0 43.75%;
     flex: 0 0 43.75%; }
   .col-mob-l-8 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%; }
   .col-mob-l-9 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 56.25%;
     -ms-flex: 0 0 56.25%;
     flex: 0 0 56.25%; }
   .col-mob-l-10 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 62.5%;
     -ms-flex: 0 0 62.5%;
     flex: 0 0 62.5%; }
   .col-mob-l-11 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 68.75%;
     -ms-flex: 0 0 68.75%;
     flex: 0 0 68.75%; }
   .col-mob-l-12 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%; }
   .col-mob-l-13 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 81.25%;
     -ms-flex: 0 0 81.25%;
     flex: 0 0 81.25%; }
   .col-mob-l-14 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 87.5%;
     -ms-flex: 0 0 87.5%;
     flex: 0 0 87.5%; }
   .col-mob-l-15 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 93.75%;
     -ms-flex: 0 0 93.75%;
     flex: 0 0 93.75%; }
   .col-mob-l-16 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%; }
   .col-mob-l-offset-1 {
@@ -574,87 +519,73 @@
   .col-mob-l-offset-15 {
     margin-left: 93.75%; }
   .col-mob-l-reverse-offset-15 {
-    margin-right: 93.75%; } }
+    margin-right: 93.75%; }
+  .col-mob-l-hide {
+    display: none; } }
 
 @media (min-width: 992px) {
   .col-tab-1 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 6.25%;
     -ms-flex: 0 0 6.25%;
     flex: 0 0 6.25%; }
   .col-tab-2 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 12.5%;
     -ms-flex: 0 0 12.5%;
     flex: 0 0 12.5%; }
   .col-tab-3 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 18.75%;
     -ms-flex: 0 0 18.75%;
     flex: 0 0 18.75%; }
   .col-tab-4 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%; }
   .col-tab-5 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 31.25%;
     -ms-flex: 0 0 31.25%;
     flex: 0 0 31.25%; }
   .col-tab-6 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 37.5%;
     -ms-flex: 0 0 37.5%;
     flex: 0 0 37.5%; }
   .col-tab-7 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 43.75%;
     -ms-flex: 0 0 43.75%;
     flex: 0 0 43.75%; }
   .col-tab-8 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%; }
   .col-tab-9 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 56.25%;
     -ms-flex: 0 0 56.25%;
     flex: 0 0 56.25%; }
   .col-tab-10 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 62.5%;
     -ms-flex: 0 0 62.5%;
     flex: 0 0 62.5%; }
   .col-tab-11 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 68.75%;
     -ms-flex: 0 0 68.75%;
     flex: 0 0 68.75%; }
   .col-tab-12 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%; }
   .col-tab-13 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 81.25%;
     -ms-flex: 0 0 81.25%;
     flex: 0 0 81.25%; }
   .col-tab-14 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 87.5%;
     -ms-flex: 0 0 87.5%;
     flex: 0 0 87.5%; }
   .col-tab-15 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 93.75%;
     -ms-flex: 0 0 93.75%;
     flex: 0 0 93.75%; }
   .col-tab-16 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%; }
   .col-tab-offset-1 {
@@ -716,87 +647,73 @@
   .col-tab-offset-15 {
     margin-left: 93.75%; }
   .col-tab-reverse-offset-15 {
-    margin-right: 93.75%; } }
+    margin-right: 93.75%; }
+  .col-tab-hide {
+    display: none; } }
 
 @media (min-width: 1200px) {
   .col-lap-1 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 6.25%;
     -ms-flex: 0 0 6.25%;
     flex: 0 0 6.25%; }
   .col-lap-2 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 12.5%;
     -ms-flex: 0 0 12.5%;
     flex: 0 0 12.5%; }
   .col-lap-3 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 18.75%;
     -ms-flex: 0 0 18.75%;
     flex: 0 0 18.75%; }
   .col-lap-4 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%; }
   .col-lap-5 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 31.25%;
     -ms-flex: 0 0 31.25%;
     flex: 0 0 31.25%; }
   .col-lap-6 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 37.5%;
     -ms-flex: 0 0 37.5%;
     flex: 0 0 37.5%; }
   .col-lap-7 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 43.75%;
     -ms-flex: 0 0 43.75%;
     flex: 0 0 43.75%; }
   .col-lap-8 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%; }
   .col-lap-9 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 56.25%;
     -ms-flex: 0 0 56.25%;
     flex: 0 0 56.25%; }
   .col-lap-10 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 62.5%;
     -ms-flex: 0 0 62.5%;
     flex: 0 0 62.5%; }
   .col-lap-11 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 68.75%;
     -ms-flex: 0 0 68.75%;
     flex: 0 0 68.75%; }
   .col-lap-12 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%; }
   .col-lap-13 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 81.25%;
     -ms-flex: 0 0 81.25%;
     flex: 0 0 81.25%; }
   .col-lap-14 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 87.5%;
     -ms-flex: 0 0 87.5%;
     flex: 0 0 87.5%; }
   .col-lap-15 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 93.75%;
     -ms-flex: 0 0 93.75%;
     flex: 0 0 93.75%; }
   .col-lap-16 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%; }
   .col-lap-offset-1 {
@@ -858,87 +775,73 @@
   .col-lap-offset-15 {
     margin-left: 93.75%; }
   .col-lap-reverse-offset-15 {
-    margin-right: 93.75%; } }
+    margin-right: 93.75%; }
+  .col-lap-hide {
+    display: none; } }
 
 @media (min-width: 1980px) {
   .col-desk-1 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 6.25%;
     -ms-flex: 0 0 6.25%;
     flex: 0 0 6.25%; }
   .col-desk-2 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 12.5%;
     -ms-flex: 0 0 12.5%;
     flex: 0 0 12.5%; }
   .col-desk-3 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 18.75%;
     -ms-flex: 0 0 18.75%;
     flex: 0 0 18.75%; }
   .col-desk-4 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 25%;
     -ms-flex: 0 0 25%;
     flex: 0 0 25%; }
   .col-desk-5 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 31.25%;
     -ms-flex: 0 0 31.25%;
     flex: 0 0 31.25%; }
   .col-desk-6 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 37.5%;
     -ms-flex: 0 0 37.5%;
     flex: 0 0 37.5%; }
   .col-desk-7 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 43.75%;
     -ms-flex: 0 0 43.75%;
     flex: 0 0 43.75%; }
   .col-desk-8 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 50%;
     -ms-flex: 0 0 50%;
     flex: 0 0 50%; }
   .col-desk-9 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 56.25%;
     -ms-flex: 0 0 56.25%;
     flex: 0 0 56.25%; }
   .col-desk-10 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 62.5%;
     -ms-flex: 0 0 62.5%;
     flex: 0 0 62.5%; }
   .col-desk-11 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 68.75%;
     -ms-flex: 0 0 68.75%;
     flex: 0 0 68.75%; }
   .col-desk-12 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 75%;
     -ms-flex: 0 0 75%;
     flex: 0 0 75%; }
   .col-desk-13 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 81.25%;
     -ms-flex: 0 0 81.25%;
     flex: 0 0 81.25%; }
   .col-desk-14 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 87.5%;
     -ms-flex: 0 0 87.5%;
     flex: 0 0 87.5%; }
   .col-desk-15 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 93.75%;
     -ms-flex: 0 0 93.75%;
     flex: 0 0 93.75%; }
   .col-desk-16 {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%; }
   .col-desk-offset-1 {
@@ -1000,95 +903,80 @@
   .col-desk-offset-15 {
     margin-left: 93.75%; }
   .col-desk-reverse-offset-15 {
-    margin-right: 93.75%; } }
+    margin-right: 93.75%; }
+  .col-desk-hide {
+    display: none; } }
 
 .horizontal-align-center {
   -webkit-box-pack: space-evenly;
-  -webkit-justify-content: space-evenly;
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly; }
 
 .horizontal-align-center-equal-space-between {
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between; }
 
 .horizontal-align-center-equal-space-around {
-  -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around; }
 
 .horizontal-align-left {
   -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start; }
 
 .horizontal-align-right {
   -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
 
 .horizontal-align-middle {
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center; }
 
 .verticle-align-center {
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-align-content: space-evenly;
   -ms-flex-line-pack: space-evenly;
   align-content: space-evenly; }
 
 .verticle-align-center-equal-space-around {
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-align-content: space-around;
   -ms-flex-line-pack: distribute;
   align-content: space-around; }
 
 .verticle-align-center-equal-space-between {
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-align-content: space-between;
   -ms-flex-line-pack: justify;
   align-content: space-between; }
 
 .verticle-align-top {
-  -webkit-align-content: flex-start;
   -ms-flex-line-pack: start;
   align-content: flex-start; }
 
 .verticle-align-top-equal-space-after {
   -webkit-box-align: start;
-  -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start; }
 
 .verticle-align-bottom {
-  -webkit-align-content: flex-end;
   -ms-flex-line-pack: end;
   align-content: flex-end; }
 
 .verticle-align-bottom-equal-space-before {
   -webkit-box-align: end;
-  -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end; }
 
 .verticle-align-text-base {
   -webkit-box-align: baseline;
-  -webkit-align-items: baseline;
   -ms-flex-align: baseline;
   align-items: baseline; }
 
@@ -1096,11 +984,9 @@
   text-align: center; }
 
 .verticle-self-align-top {
-  -webkit-align-self: flex-start;
   -ms-flex-item-align: start;
   align-self: flex-start; }
 
 .verticle-self-align-bottom {
-  -webkit-align-self: flex-end;
   -ms-flex-item-align: end;
   align-self: flex-end; }
