--- a/scss/gridbox-nav.scss
+++ b/scss/gridbox-nav.scss
@@ -10,135 +10,165 @@
     &.nav-top{
         position: relative;
         top: 0;
-    }
+    } 
+}
+ 
+.logo {
+    position: relative;
+    height: 100%;
+    text-align: center;
 
-
-    .brand {
-
-        .logo {
-            position: relative;
-            height: 100%;
-            text-align: center;
-
-            img {
-                display: block;
-                position: relative;
-                width: 55px;
-                height:auto;
-                top: 50%;
-                transform: translate(0, -50%);
-            }
-        }
-
-        .brandname {
-            height: 100%;
-
-            p {
-                position: relative;
-                padding: 0.8rem 0;
-                top: 50%;
-                transform: translate(0, -50%);
-
-                font: {
-                    size: $logoSize;
-                    weight: bold;
-                }
-                text-align: left;
-            }           
-        }
-
-        .menutoggle {
-            @extend .brandname;
-            cursor: pointer;
-        }
-    }
-
-    .navmenuwrap {
+    img {
+        display: block;
         position: relative;
+        width: 30px;
+        height:auto;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
+}
 
-    .navmenu {
-        // display: flex;
-        // flex-wrap: wrap;
-        // position: relative;
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
+.brandname {
+    a {
+        position: relative;
+        display: block;
+        padding: 15px 0;
+        // top: 50%;
+        // transform: translate(0, -50%);
 
-        // &.verticle {
-        //     flex-direction: column;
+        font: {
+            size: $logoSize;
+            weight: bold;
+        }
+        color: #000;
 
-        //     .navmenu-sub {
-        //         // repos changes the position to relative, so the dropdown menu item won't bock other main menu items when displayed vertically
-        //         // repos is used only when the parent ul.verticle is exists
-        //         &.repos {
-        //             position: relative !important; // overwrite the position to relative
-        //         }
-        //     }
-        // }
+        line-height: 20px;
+        text-align: left;
+        text-decoration: none;
+    }           
+}
 
-        .menuitem {
-            // flex: 1 1 auto;
-            position: relative;
+.menutoggle {
+    cursor: pointer;
 
-            a {
-                display: block;
-                padding: 15px 20px;
-                text-align: center;
-                text-decoration: none;
-                color: #000;
+    &:hover {
+        span {
+            width: 35px;
+        }
 
-                &:hover {
-                    background: #000;
-                    color: #fff;
-                }
-
-                &.active {
-                    background: #000;
-                    color: #fff;
-                }
-            }
-
-            
-
-            // /* 
-            // * =======================================================================
-            // *                          Dropdown Memu
-            // * -----------------------------------------------------------------------
-            // * Description:    Menu item has a dropdown list will have a .dropdown 
-            // *                 class. There will be a child ul element with a class of
-            // *                 .navmenu-sub.
-            // *
-            // *                 By default, it will not displayed, the toggle functionality 
-            // *                 will be enabled by javascript. When dropdown menu is 
-            // *                 toggled, a .show class will be added to the li element
-            // * -----------------------------------------------------------------------
-            // * Note:      The dropdown menu will have the same width as the grandpa 
-            // *            ul.navmenu element
-            // * ========================================================================
-            // */
-
-            &.dropdown {
-
-                .navmenu-sub {
-                    display: none;
-
-                    &.show{
-                        display: block;
-                        position: relative;
-                        width: 100%;
-                        left: 0;
-                        list-style: none;
-                        background: #eee;
-                    }
-
-                    .submenuitem { 
-                        a {
-                            padding: 15px 20px;
-                        }
-                    }
-                }
-            }
+        span::before {
+            top: 0;
+            transform: rotate(45deg);
+        }
+    
+        span::after {
+            top: 0;
+            transform: rotate(-45deg);
         }
     }
+
+    span {
+        position: relative;
+        display: block;
+        width: 30px;
+        height: 3px;
+        top: 50%;
+        transform: translate(0, -50%);
+        background: #000;
+        transition: all 0.3s ease-in-out;
+        
+    
+        &::before {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 35px;
+            height: 3px;
+            top: -8px;
+            background: #000;
+            transition: all 0.3s ease-in-out;
+        }
+    
+        &::after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 35px;
+            height: 3px;
+            top: 8px;
+            background: #000;
+            transition: all 0.3s ease-in-out;
+        }  
+    }
+}
+
+
+
+
+.navmenuwrap {
+    position: relative;
+}
+
+.navmenu {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.menuitem {
+    position: relative;
+
+    a {
+        display: block;
+        padding: 15px 20px;
+        color: #000;
+        font-weight: 500;
+        line-height: 20px;
+        text-align: center;
+        text-decoration: none;
+
+        &:hover {
+            background: #000;
+            color: #fff;
+        }
+
+        &.active {
+            background: #000;
+            color: #fff;
+        }
+    }
+}
+
+// /* 
+// * =======================================================================
+// *                          Dropdown Memu
+// * -----------------------------------------------------------------------
+// * Description:    Menu item has a dropdown list will have a .dropdown 
+// *                 class. There will be a child ul element with a class of
+// *                 .navmenu-sub.
+// *
+// *                 By default, it will not displayed, the toggle functionality 
+// *                 will be enabled by javascript. When dropdown menu is 
+// *                 toggled, a .show class will be added to the li element
+// * -----------------------------------------------------------------------
+// * Note:      The dropdown menu will have the same width as the grandpa 
+// *            ul.navmenu element
+// * ========================================================================
+// */
+.navmenu-sub {
+    display: none;
+    position: absolute;
+    width: 200%;
+    left: 0;
+    list-style: none;
+    background: #eee;
+
+    a {
+        padding: 15px 20px;
+    }
+}
+
+.dropdown > a:focus ~ ul {
+    display: block;
 }
