--- a/scss/gridbox-grids.scss
+++ b/scss/gridbox-grids.scss
@@ -19,7 +19,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: $containerBottomMargin;
-    background: $containerBGColor;
+    // background: $containerBGColor;
 
     &:last-child {
         margin-bottom: 0;
