--- a/css/gridbox-grids.css
+++ b/css/gridbox-grids.css
@@ -3,8 +3,7 @@
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 15px;
-  background: #e0e0e0; }
+  margin-bottom: 15px; }
   .container:last-child, .container-fluid:last-child {
     margin-bottom: 0; }
 
