--- a/css/gridbox-nav.css
+++ b/css/gridbox-nav.css
@@ -1,14 +1,40 @@
 .nav {
-  margin-bottom: 30px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-bottom: 15px; }
   .nav.nav-default {
     background: #e0e0e0; }
   .nav.nav-top {
     position: relative;
     top: 0; }
 
+.brand {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 100%;
+  flex: 1 1 100%;
+  height: 100%;
+  background: #e0e0e0;
+  z-index: 100; }
+  @media screen and (min-width: 1200px) {
+    .brand {
+      -webkit-box-flex: 0;
+      -ms-flex: 0 0 30%;
+      flex: 0 0 30%; } }
+
 .logo {
   position: relative;
-  height: 100%;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50px;
+  flex: 0 0 50px;
+  margin-left: 15px;
   text-align: center; }
   .logo img {
     display: block;
@@ -21,27 +47,36 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
 
-.brandname a {
-  position: relative;
-  display: block;
-  padding: 15px 0;
-  font-size: 1.3rem;
-  font-weight: bold;
-  color: #000;
-  line-height: 20px;
-  text-align: left;
-  text-decoration: none; }
+.brandname {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin-left: 15px; }
+  .brandname a {
+    position: relative;
+    display: block;
+    padding: 15px 0;
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: #000;
+    line-height: 20px;
+    text-align: left;
+    text-decoration: none; }
 
 .menutoggle {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 50px;
+  flex: 0 0 50px;
+  margin-right: 15px;
   cursor: pointer; }
-  .menutoggle:hover span {
+  .menutoggle.active span {
     width: 35px; }
-  .menutoggle:hover span::before {
+  .menutoggle.active span::before {
     top: 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg); }
-  .menutoggle:hover span::after {
+  .menutoggle.active span::after {
     top: 0;
     -webkit-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
@@ -81,27 +116,82 @@
       -webkit-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       transition: all 0.3s ease-in-out; }
+  @media only screen and (min-width: 1200px) {
+    .menutoggle {
+      display: none; } }
 
 .navmenuwrap {
-  position: relative; }
+  display: block;
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 100%;
+  flex: 1 1 100%;
+  margin-top: -100%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background: #e0e0e0;
+  z-index: 10; }
+  .navmenuwrap.show {
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    margin-top: 0; }
+  @media screen and (min-width: 1200px) {
+    .navmenuwrap {
+      display: block;
+      -webkit-box-flex: 1;
+      -ms-flex: 1 0 70%;
+      flex: 1 0 70%;
+      margin-top: 0; } }
 
 .navmenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  position: relative;
   margin: 0;
   padding: 0;
   list-style-type: none; }
 
 .menuitem {
-  position: relative; }
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 25%;
+  flex: 0 0 25%; }
+  @media screen and (min-width: 1200px) {
+    .menuitem {
+      display: block;
+      -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+      flex: 1 0 auto; } }
+  .menuitem:last-child {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%; }
+    @media screen and (min-width: 1200px) {
+      .menuitem:last-child {
+        -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+        flex: 1 0 auto; } }
   .menuitem a {
     display: block;
-    padding: 15px 20px;
+    padding: 25px 0;
     color: #000;
     font-weight: 500;
     line-height: 20px;
     text-align: center;
     text-decoration: none; }
+    @media screen and (min-width: 1200px) {
+      .menuitem a {
+        display: block;
+        -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+        flex: 1 0 auto;
+        padding: 15px 20px; } }
     .menuitem a:hover {
-      background: #000;
+      background-color: #000;
       color: #fff; }
     .menuitem a.active {
       background: #000;
@@ -110,12 +200,65 @@
 .navmenu-sub {
   display: none;
   position: absolute;
-  width: 200%;
+  width: 100%;
   left: 0;
   list-style: none;
   background: #eee; }
+  .navmenu-sub.show {
+    display: block; }
   .navmenu-sub a {
-    padding: 15px 20px; }
+    padding: 25px 20px; }
 
-.dropdown > a:focus ~ ul {
-  display: block; }
+.searchbar {
+  display: none;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  background: #eee; }
+  .searchbar.show {
+    display: block; }
+  .searchbar form {
+    padding: 25px; }
+
+.bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  @media screen and (min-width: 1200px) {
+    .bar {
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row; } }
+  .bar input {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 100%;
+    flex: 1 1 100%;
+    margin-bottom: 25px; }
+    @media screen and (min-width: 1200px) {
+      .bar input {
+        -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        margin-bottom: 0; } }
+  .bar button {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 125px;
+    flex: 0 0 125px; }
+    @media screen and (min-width: 1200px) {
+      .bar button {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 35px;
+        flex: 0 0 35px;
+        margin: 0 0 0 15px; } }
