--- a/scss/gridbox-nav.scss
+++ b/scss/gridbox-nav.scss
@@ -1,10 +1,27 @@
 @import "_variables.scss";
 
+// ----------------- variables -------------------
+$margin: 15px;
+
+$menu-background: #e0e0e0;
+$submenu-background: #eee;
+$menu-item-active: #000;
+$menu-item-hover: #000;
+$font-color: #000;
+$font-color-hover: #fff;
+$font-color-active: #fff;
+
+// ------------------- Styles --------------------
+
+// ------------------ parent container ---------------------
 .nav {
-    margin-bottom: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: $margin;
+    
 
     &.nav-default {
-        background: #e0e0e0;
+        background: $menu-background;
     }
 
     &.nav-top{
@@ -12,17 +29,32 @@
         top: 0;
     } 
 }
+
+// ------------------ brand section ---------------------
+.brand {
+    display: flex;
+    flex-wrap: nowrap;
+    flex: 1 1 100%;
+    height: 100%;
+    background: $menu-background;
+    z-index: 100;
+
+    @media screen and (min-width: 1200px) {
+        flex: 0 0 30%;
+    }
+}
  
 .logo {
     position: relative;
-    height: 100%;
+    flex: 0 0 50px;
+    margin-left: $margin;
     text-align: center;
 
     img {
         display: block;
         position: relative;
         width: 30px;
-        height:auto;
+        height: auto;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -30,6 +62,8 @@
 }
 
 .brandname {
+    flex: 1 1 auto;
+    margin-left: $margin;
     a {
         position: relative;
         display: block;
@@ -38,10 +72,10 @@
         // transform: translate(0, -50%);
 
         font: {
-            size: $logoSize;
+            size: 1.3rem;
             weight: bold;
         }
-        color: #000;
+        color: $font-color;
 
         line-height: 20px;
         text-align: left;
@@ -50,9 +84,11 @@
 }
 
 .menutoggle {
+    flex: 0 0 50px;
+    margin-right: $margin;
     cursor: pointer;
 
-    &:hover {
+    &.active {
         span {
             width: 35px;
         }
@@ -75,7 +111,7 @@
         height: 3px;
         top: 50%;
         transform: translate(0, -50%);
-        background: #000;
+        background: $font-color;
         transition: all 0.3s ease-in-out;
         
     
@@ -86,7 +122,7 @@
             width: 35px;
             height: 3px;
             top: -8px;
-            background: #000;
+            background: $font-color;
             transition: all 0.3s ease-in-out;
         }
     
@@ -97,78 +133,156 @@
             width: 35px;
             height: 3px;
             top: 8px;
-            background: #000;
+            background: $font-color;
             transition: all 0.3s ease-in-out;
         }  
+    }
+
+    @media only screen and (min-width: 1200px) {
+        display: none;
     }
 }
 
 
-
-
+// ------------------ menu section ---------------------
 .navmenuwrap {
+    display: block;
     position: relative;
+    flex: 1 1 100%;
+    margin-top: -100%;
+    // transform: translate(0, -100%);
+    transition: all 0.3s ease-in-out;
+    background: $menu-background;
+    z-index: 10;
+
+    &.show {
+        // display: block;
+        // transform: translate(0, 0);
+        transition: all 0.3s ease-in-out;
+        margin-top: 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+        flex: 1 0 70%;
+        margin-top: 0;
+    }
 }
 
 .navmenu {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
 
 .menuitem {
-    position: relative;
+    flex: 0 0 25%;
+
+    @media screen and (min-width: 1200px) {
+        display: block;
+        flex: 1 0 auto;
+    }
+
+    &:last-child {
+        flex: 0 0 100%;
+        
+        @media screen and (min-width: 1200px) {
+            flex: 1 0 auto;
+        }
+    }
 
     a {
         display: block;
-        padding: 15px 20px;
-        color: #000;
+        padding: 25px 0;
+        color: $font-color;
         font-weight: 500;
         line-height: 20px;
         text-align: center;
         text-decoration: none;
 
+        @media screen and (min-width: 1200px) {
+            display: block;
+            flex: 1 0 auto;
+            padding: 15px 20px;
+        }
+
         &:hover {
-            background: #000;
-            color: #fff;
+            background-color: $menu-item-hover;
+            color: $font-color-hover;
         }
 
         &.active {
-            background: #000;
-            color: #fff;
+            background: $menu-item-active;
+            color: $font-color-active;
         }
     }
 }
 
-// /* 
-// * =======================================================================
-// *                          Dropdown Memu
-// * -----------------------------------------------------------------------
-// * Description:    Menu item has a dropdown list will have a .dropdown 
-// *                 class. There will be a child ul element with a class of
-// *                 .navmenu-sub.
-// *
-// *                 By default, it will not displayed, the toggle functionality 
-// *                 will be enabled by javascript. When dropdown menu is 
-// *                 toggled, a .show class will be added to the li element
-// * -----------------------------------------------------------------------
-// * Note:      The dropdown menu will have the same width as the grandpa 
-// *            ul.navmenu element
-// * ========================================================================
-// */
+// ------------------ sub-menu section ---------------------
 .navmenu-sub {
     display: none;
     position: absolute;
-    width: 200%;
+    width: 100%;
     left: 0;
     list-style: none;
-    background: #eee;
+    background: $submenu-background;
+
+    &.show {
+        display: block;
+    }
 
     a {
-        padding: 15px 20px;
+        padding: 25px 20px;
     }
 }
 
-.dropdown > a:focus ~ ul {
-    display: block;
+// ------------------ search bar section ---------------------
+.searchbar {
+    display: none;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    background: $submenu-background;
+
+    &.show {
+        display: block;
+    }
+
+    form {
+        padding: 25px;
+    }
+}
+
+.bar {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+        flex-direction: row;
+    }
+
+    input {
+        flex: 1 1 100%;
+        margin-bottom: 25px;
+
+        @media screen and (min-width: 1200px) {
+            flex: 1 1 auto;
+            margin-bottom: 0;
+        }
+    }
+
+    button {
+        flex: 0 0 125px;
+
+        @media screen and (min-width: 1200px) {
+            flex: 0 0 35px;
+            margin: 0 0 0 15px;
+        }
+    }  
 }
